# TreeLine

./: .env.example  .gitignore  README.md  TODO.md  dev.sh  docker-compose.yml  pyproject.toml  run_admin.sh
ai_agent/: Dockerfile  __init__.py  requirements.txt  test_logger.py
ai_agent/agent/: __init__.py  core.py  logger.py  rag_pipeline.py  vector_store.py
ai_agent/data/knowledge_base/: .gitkeep  account_security.md  api_overview.md  backup_and_restore.md  billing_policies.md  contact_escalation_policy.md  customization_options.md  data_privacy.md  developer_quickstart.md  feature_requests.md  getting_started.md  integration_guide.md  known_issues.md  mobile_app_guide.md  onboarding_guide.md  product_updates.md  reporting_and_analytics.md  sample_faq.md  system_status_and_uptime.md  terms_of_service.md  troubleshooting_common_issues.md  user_roles_and_permissions.md
ai_agent/tests/: __init__.py  test_agent.py
backend/: Dockerfile  __init__.py  main.py  requirements.txt
backend/app/: __init__.py
backend/app/api/routes/: chat.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  conversation.py
backend/app/schemas/: __init__.py  chat.py
backend/tests/: conftest.py  test_api.py
config/docker/postgres/: init.sql
docs/: api-endpoints.md  code-review-observations.md  database-initialization.md  development-guide.md
ui/: Dockerfile  __init__.py  admin_app.py  requirements.txt  streamlit_app.py
ui/.streamlit/: config.toml
ui/components/: chat_interface.py
ui/tests/: test_ui.py
